--- a/DSL/generator/pom.xml
+++ b/DSL/generator/pom.xml
@@ -3,8 +3,8 @@
 	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
  
-  <groupId>com.polytech.si5-dsl</groupId>
-  <artifactId>kernel-jvm</artifactId>
+  <groupId>com.polytech.si5-dsl-g</groupId>
+  <artifactId>generator</artifactId>
   <version>1.0</version>
   <packaging>jar</packaging>
  
