--- a/output/package.json
+++ b/output/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuebootstrapdemo",
+  "name": "vuedslg",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,11 +15,13 @@
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "^4.5.15",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
