--- a/IDE/front/.env
+++ b/IDE/front/.env
@@ -1,2 +1,2 @@
-VUE_APP_BACK_BASE_API=172.27.177.223:8080/dsl-api
-VUE_APP_SESSION_IP=172.27.177.223
+VUE_APP_BACK_BASE_API=localhost:8080/dsl-api
+VUE_APP_SESSION_IP=localhost
