--- a/IDE/front/package.json
+++ b/IDE/front/package.json
@@ -9,6 +9,7 @@
     "start": "vue-cli-service serve"
   },
   "dependencies": {
+    "antlr4": "^4.9.3",
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
