--- a/DSL/parser/pom.xml
+++ b/DSL/parser/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>antlr4-runtime</artifactId>
             <version>4.7</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180130</version>
+        </dependency>
     </dependencies>
 
     <build>
