--- a/IDE/front/package.json
+++ b/IDE/front/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "vue-cli-service serve"
+    "start": "vue-cli-service serve --port 8081"
   },
   "dependencies": {
     "antlr4": "^4.9.3",
