--- a/IDE/front/.env
+++ b/IDE/front/.env
@@ -1,4 +1,4 @@
 
-VUE_APP_BACK_BASE_API=172.27.184.114:8080/dsl-api
-VUE_APP_SESSION_IP=172.27.184.114
+VUE_APP_BACK_BASE_API=localhost:8080/dsl-api
+VUE_APP_SESSION_IP=localhost
 
